# limeprompt

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
examples/: anthropic_example.py  openai_example.py
limeprompt/: __init__.py  core.py  exceptions.py  types.py  utils.py
tests/: _types.py  test_limeprompt.py
